# laser_object_tracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
cmake/: ConfigureExternalProject.cmake  MHT.cmake  mht.cmake
config/: filters.yaml  multi_line_detection.yaml  tracker.yaml
include/laser_object_tracker/: multi_tracker_ros.hpp  track_unifying.hpp
include/laser_object_tracker/data_association/: base_data_association.hpp  data_association.hpp  hungarian_algorithm.hpp  naive_linear_assignment.hpp
include/laser_object_tracker/data_types/: data_types.hpp  definitions.hpp  fragment_iterator.hpp  laser_scan_fragment.hpp
include/laser_object_tracker/feature_extraction/: base_feature_extraction.hpp  feature_extraction.hpp  multi_line_detection.hpp  random_sample_consensus_corner_detection.hpp  random_sample_consensus_segment_detection.hpp  search_based_corner_detection.hpp
include/laser_object_tracker/feature_extraction/features/: corner_2d.hpp  feature.hpp  features.hpp  line_2d.hpp  object.hpp  point_2d.hpp  segment_2d.hpp
include/laser_object_tracker/feature_extraction/occlusion_checking/: occlusion_checking.hpp
include/laser_object_tracker/feature_extraction/pcl/: sac_model_cross2d.hpp
include/laser_object_tracker/filtering/: aggregate_segmented_filtering.hpp  base_segmented_filtering.hpp  filtering.hpp  obb_area_filter.hpp  occlusion_detection.hpp  points_number_filter.hpp
include/laser_object_tracker/multi_scanner_tracking/ros/: multi_scanner_tracking_ros.hpp
include/laser_object_tracker/multi_scanner_tracking/track_unifying/: track_unifying.hpp
include/laser_object_tracker/segmentation/: adaptive_breakpoint_detection.hpp  base_segmentation.hpp  breakpoint_detection.hpp  distance_calculation.hpp  segmentation.hpp
include/laser_object_tracker/tracking/: base_multi_tracking.hpp  base_tracker_rejection.hpp  base_tracking.hpp  corner_tracker.hpp  iteration_tracker_rejection.hpp  kalman_filter.hpp  multi_hypothesis_tracking.hpp  multi_tracker.hpp  multi_tracking.hpp  tracking.hpp
include/laser_object_tracker/tracking/mht/: motion_model.hpp  object_model.hpp  track.hpp
include/laser_object_tracker/tracking/object_matching/: fast_object_matching.hpp
include/laser_object_tracker/tracking/ros/: multi_tracking_ros.hpp
include/laser_object_tracker/visualization/: laser_object_tracker_visualization.hpp  visualization.hpp
launch/: all.launch  filters.launch  laser_object_tracker.launch  multi_line_detection.launch  world.launch
rviz/: simulation.rviz
src/: hungarian_algorithm_test.cpp  laser_object_tracker.cpp  multi_hypothesis_tracker_test.cpp  multi_line_detection_test.cpp  multi_tracker_ros.cpp  multi_tracker_test.cpp  track_unifying.cpp
src/data_association/: base_data_association.cpp  hungarian_algorithm.cpp  naive_linear_assignment.cpp
src/data_types/: laser_scan_fragment.cpp
src/feature_extraction/: multi_line_detection.cpp  random_sample_consensus_corner_detection.cpp  random_sample_consensus_segment_detection.cpp  search_based_corner_detection.cpp
src/feature_extraction/features/: corner_2d.cpp  object.cpp  segment_2d.cpp
src/filtering/: aggregate_segmented_filtering.cpp  base_segmented_filtering.cpp  obb_area_filter.cpp  occlusion_detection.cpp  points_number_filter.cpp
src/multi_scanner_tracking/ros/: multi_scanner_tracking_ros.cpp
src/multi_scanner_tracking/track_unifying/: track_unifying.cpp
src/segmentation/: adaptive_breakpoint_detection.cpp  breakpoint_detection.cpp
src/tracking/: base_tracking.cpp  corner_tracker.cpp  iteration_tracker_rejection.cpp  kalman_filter.cpp  multi_hypothesis_tracking.cpp  multi_tracker.cpp  multi_tracking.cpp
src/tracking/mht/: motion_model.cpp  object_model.cpp
src/tracking/object_matching/: fast_object_matching.cpp
src/tracking/ros/: multi_tracking_ros.cpp
src/visualization/: laser_object_tracker_visualization.cpp
test/include/test/: utils.hpp
test/include/test/data_association/: mocks.hpp
test/include/test/data_types/: test_data.hpp
test/include/test/filtering/: mocks.hpp
test/include/test/segmentation/: test_data.hpp  test_data_abd.hpp  test_data_bd.hpp
test/include/test/tracking/: mocks.hpp
test/src/: test_motion_tracking.cpp
test/src/data_association/: hungarian_algorithm_test.cpp  naive_linear_assignment_test.cpp
test/src/data_types/: definitions_test.cpp  iterators_test.cpp  laser_scan_fragment_test.cpp
test/src/feautre_extraction/: random_sample_consensus_segment_detection_test.cpp  sample_consensus_model_cross2d_test.cpp  search_based_corner_detection_test.cpp
test/src/feautre_extraction/features/: line_2d_test.cpp  segment_2d_test.cpp
test/src/filtering/: aggregate_segmented_filtering_test.cpp  base_segmented_filtering_test.cpp  obb_area_filter_test.cpp  points_number_filter_test.cpp
test/src/segmentation/: adaptive_breakpoint_detection_test.cpp  breakpoint_detection_test.cpp  distance_calculation_test.cpp
test/src/tracking/: iteration_tracker_rejection_test.cpp  kalman_filter_test.cpp  multi_tracker_test.cpp  multi_tracking_test.cpp
test/src/tracking/object_matching/: fast_object_matching_test.cpp
world/: willow-erratic.world  willowgarage-refined.pgm
