<?xml version="1.0"?>
<package format="2">
  <name>laser_object_tracker</name>
  <version>0.0.0</version>
  <description>Package for detecting and tracking moving objects using 2D laser scanners</description>

  <maintainer email="piotr.pokorski94@gmail.com">Piotr Pokorski</maintainer>
  <license>BSD 3-Clause</license>
  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/laser_object_tracker</url> -->
  <author email="piotr.pokorski94@gmail.com">Piotr Pokorski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>laser_geometry</build_depend>
  <build_depend>laser_object_tracker_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz_visual_tools</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_export_depend>laser_geometry</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rviz_visual_tools</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>

  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>laser_object_tracker_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz_visual_tools</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
</package>
